build/testuserdir/var/cache/index/s30/errors/1/tests/common/tests/assets/test-console.css.warn
WARNING:2:Unexpected character(s) "inherit" found
